Implementacion de entrenador y clases