@@ -32,7 +32,7 @@ public class BonoService {
     public List<BonoDTO> listarTodos() {
         return bonoRepository.findAll().stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
